--- a/sofrimento/style.css
+++ b/sofrimento/style.css
@@ -38,8 +38,8 @@ body{
     height: 50rem;
 }
 
-.instagram-logo{
-    width: 50%;
+.instagram-logo {
+    height: 3rem;
 }
 
 .intagram-continue {
@@ -60,4 +60,74 @@ body{
     width: 100%;
     padding: 1.3rem 0;
     border: 1px solid lightgrey;
+    margin-bottom: 10px;
+    
+}
+
+.group:nth-child(1) {
+    min-height: 19rem;
+}
+
+.profile-photo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.profile-photo img{
+    height: 6rem;
+}
+
+.instagram-login {
+    background-color: #0095f6;
+    color: white;
+    padding: 8px;
+    border-radius: 4px;
+}
+
+.instagram-logout{
+    color: #0095f6;
+    margin-top: 1rem;
+}
+
+.not-account{
+    color: rgb(160, 160, 160)
+}
+
+.link-blue{
+    color: #0095f6;
+}
+.get-the-app{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1.3rem 0;
+    font-weight: bold;
+}
+
+.download {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+
+.app-download{
+    height: 3rem;
+    width: 10rem;
+    background-size: cover;
+}
+
+.app-download:nth-child(1){
+    background-image: url(/sofrimento/imagens/apple.png);
+}
+
+.app-download:nth-child(2){
+    background-image: url(/sofrimento/imagens/playstore.png);
 }
