--- a/sofrimento/style.css
+++ b/sofrimento/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -7,7 +7,7 @@
     font-size: 14px;
 }
 
-body{
+body {
     width: 100%;
     min-height: 100vh;
     background-color: rgb(243, 243, 243);
@@ -17,8 +17,6 @@ body{
     justify-content: center;
 }
 
-/* align itens é o alinhamento vertical centro do eixo Y e X*/
-/* display flex vira o flex-container, é onde todos os ficam em linha ocupando o maior espaço e vazam caso não consigam mais caber (sempre em linhaaaaa)*/
 .instagram-wrapper {
     display: flex; 
     align-items: center;
@@ -38,11 +36,7 @@ body{
     height: 50rem;
 }
 
-.instagram-logo {
-    height: 3rem;
-}
-
-.intagram-continue {
+.instagram-continue {
     display: flex;
     align-items: center; /*horizontal*/
     justify-content: space-around; /*vertical*/
@@ -56,16 +50,18 @@ body{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #ffff;
+    background-color: #ffffff;
     width: 100%;
     padding: 1.3rem 0;
-    border: 1px solid lightgrey;
-    margin-bottom: 10px;
-    
+    border: 1px solid lightgrey; 
 }
 
 .group:nth-child(1) {
     min-height: 19rem;
+}
+
+.instagram-logo {
+    height: 3rem;
 }
 
 .profile-photo {
@@ -74,7 +70,6 @@ body{
     align-items: center;
     border-radius: 50%;
     overflow: hidden;
-    margin-bottom: 20px;
 }
 
 .profile-photo img{
@@ -83,7 +78,7 @@ body{
 
 .instagram-login {
     background-color: #0095f6;
-    color: white;
+    color:#ffffff;
     padding: 8px;
     border-radius: 4px;
 }
@@ -107,7 +102,6 @@ body{
     justify-content: center;
     width: 100%;
     padding: 1.3rem 0;
-    font-weight: bold;
 }
 
 .download {
@@ -118,16 +112,40 @@ body{
     padding: 1rem;
 }
 
-.app-download{
+.app-download {
     height: 3rem;
     width: 10rem;
     background-size: cover;
 }
 
-.app-download:nth-child(1){
+.app-download:nth-child(1) {
     background-image: url(/sofrimento/imagens/apple.png);
 }
 
-.app-download:nth-child(2){
+.app-download:nth-child(2) {
     background-image: url(/sofrimento/imagens/playstore.png);
+}
+
+/* media queries */
+
+@media(max-width: 1024px) {
+    .instagram-wrapper{
+        width: 90%;
+    }
+}
+
+@media(max-width: 650px){
+    .instagram-wrapper{
+        width: 90%;
+    }
+    .instagram-phone{
+        display: none;
+    }
+    .instagram-continue{
+        width: 100%;
+    }
+}
+
+.group{
+    border: 1px solid tra;
 }
